objects/Exceptions__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Category__c</fullName>
        <label>Exception Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Funding</fullName>
                </value>
                <value>
                    <fullName>Legal Stage</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Exception_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Competitor Petition Pending</fullName>
                </value>
                <value>
                    <fullName>Discount Rate</fullName>
                </value>
                <value>
                    <fullName>Fund Prior to Acknowledgment</fullName>
                </value>
                <value>
                    <fullName>Issuer Rating &lt; A-</fullName>
                </value>
                <value>
                    <fullName>Liens/Judgments</fullName>
                </value>
                <value>
                    <fullName>Low Confidence FVR</fullName>
                </value>
                <value>
                    <fullName>Missing Docs</fullName>
                </value>
                <value>
                    <fullName>NY Deal</fullName>
                </value>
                <value>
                    <fullName>Prior Denials</fullName>
                </value>
                <value>
                    <fullName>Release Prior to Legal Stage</fullName>
                </value>
                <value>
                    <fullName>Searches</fullName>
                </value>
                <value>
                    <fullName>Spread &lt; $7k</fullName>
                </value>
                <value>
                    <fullName>WAL &gt; 18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Exceptions</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>